deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaskama
  namespace: kaskama
  labels:
    app.kubernetes.io/name: kaskama
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kaskama
  ports:
    - name: http
      port: 80
      targetPort: http
