deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlykas
  namespace: onlykas
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1m
spec:
  ingressClassName: nginx
  rules:
    - host: onlykas.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onlykas
                port:
                  name: http
